# scripts

./: LICENSE
docker/: .gitignore  Readme.md  deleteall-images.sh
docker/Windows/: Dockerfile  PatientsFHIR-1Rec.json
docker/jenkins/: Dockerfile  notes.txt
docker/mongo/: Dockerfile  buildmongo.sh  delete-containers.sh  deleteall-containers.sh  deleteall-dbfiles.sh  mongo.yml  runmongo.sh  setup-collections.sh  start-containers.sh  stop-containers.sh  variables.sh
docker/neo4j/: How-To_ Run Neo4j in Docker - Neo4j Graph Database Platform.html  neo4j.txt
docker/sql_server/: Dockerfile  build.sh  compose.yml  data_setup.sh  delete-images.sh  init.sh  run.sh  variables.sh
docker/stale_mongo/: docker-compose.yml  fhirSchema.json
java/elasticache/: .gitignore  pom.xml
lua/: countkeys.lua  countkeys.sh  countsets.lua  countsets.sh  delkeys.lua  delkeys.sh  getkeys.lua  invoke.txt  test.lua
python/: .gitignore
python/cbutils/: Poetry.md  README.md  pyproject.toml
python/cbutils/poppler/: about.json  files  has_prefix  hash_input.json  index.json  paths.json
python/cbutils/poppler/recipe/: bld.bat  conda_build_config.yaml  meta.yaml
python/cbutils/poppler/test/: run_test.bat
python/cbutils/src/cbutils/: cbutils.py
python/configlib/: configlib.py
python/patient_mongo_client/: FHIR.py  Validator.py  patient_util_test.py  requirements.txt  setup.py
testcontainers/: .gitignore
testcontainers/mongodb/: pom.xml
testcontainers/simple/: Readme.md  pom.xml
vagrant/: .gitignore
vagrant/ansible/: Readme.md  Vagrantfile
vagrant/hyperv/: hyperv.ps1  (+2 more)
(+97 files in other folders)
