[tool.poetry]
name = "cbutils"
version = "0.1.0"
description = ""
authors = ["Srinivasa Narasimhan <snarasim123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
deepdiff = "^5.5.0"
pathlib2 = "^2.3.5"
pdf2image = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mock = "^4.0.3"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}

[tool.poetry.scripts]
cbutils-help = "cbutils.cbutils:run_help"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
